        these generated files in the release tarball.
      autoconf: Update install-sh script to the latest available version.
      Autoconf: Remove detection of early IPv6 stacks.
      Detect OS IPv6 support using AF_INET6 only.
      Remove all remaining support for BSD/OS, IRIX, {OSF/1, Digital Unix,
        Tru64 Unix}, SINIX and Ultrix.
      Fix compiling on GNU/Hurd.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.5 tcpdump release (so far!)
    Refine protocol decoding for:
      Arista: Use the test .pcap file from pull request #955 (HwInfo).
      BGP: Fix an undefined behavior when it tries to parse a too-short packet.
      CARP: Print the protocol name before any GET_().
      CDP: only hex-dump unknown TLVs in verbose mode.
      DHCP: parse the SZTP redirect tag.
      DHCPv6: client-id/server-id DUID type 2 correction; Parse the user class,          boot file URL, and SZTP redirect options; Add DUID-UUID printing
         (RFC6355).
      EAP: Assign ndo_protocol in the eap_print() function.
      IEEE 802.11: no need for an element ID in the structures for IEs, make
        the length in the IE structures a u_int, include the "TA" field while
        printing Block Ack Control frame.
      IP: Enable TSO (TCP Segmentation Offload) support; fix printing invalid
        cases as invalid, not truncated; use ND_ICHECKMSG_ZU() to test the
        header length.
      IPv6: Fix printing invalid cases as invalid, not truncated; use
        ND_ICHECKMSG_U() to print an invalid version.
      Kerberos: Print the protocol name, remove a redundant bounds check.
      lwres: Fix an undefined behavior in pointer arithmetic.
      OpenFlow 1.0: Fix indentation of PORT_MOD, improve handling of
          some lengths, and fix handling of snapend.
      TCP: Test ports < 1024 in port order to select the printer.
      UDP: Move source port equal BCM_LI_PORT to bottom of long if else chain.